Update 'thumbnails' for gauge and network charts

--- a/_posts/python/gauge-chart/2015-06-30-semicircular-gauge.html
+++ b/_posts/python/gauge-chart/2015-06-30-semicircular-gauge.html
@@ -3,7 +3,7 @@ permalink: python/gauge-meter
 description: How to make guage meter charts in Python with Plotly. 
 title: Python Gauge Meter | plotly
 has_thumbnail: true
-thumbnail: thumbnail/linear-gauge.jpg
+thumbnail: thumbnail/gauge.jpg
 layout: user-guide
 name: Semicircular-Gauge-Meter
 language: python
