--- a/404.html
+++ b/404.html
@@ -1,6 +1,5 @@
 ---
 title: Plot Twist
-type: api_home
 ---
 
 <!DOCTYPE html>
@@ -10,9 +9,8 @@ type: api_home
 	<body>
 
 	<div class="allcontent">
-		{% include header.html %}
-		{% include ad-text.html %}
-  
+	{% include header-white.html %}
+
         <style>
         .page404 {
             margin: 0 auto;
@@ -115,6 +113,6 @@ type: api_home
 		            </div>
 		        </div>
 	        </div>
-    {% include footer.html %}
+	        {% include footer.html %}
 	</body>
 </html>
