--- a/404.html
+++ b/404.html
@@ -101,7 +101,7 @@ title: Plot Twist
                                 c0.004,1.154-0.28,1.4-1.151,1.393C29.087,246.153,23.488,246.176,17.89,246.176z"/>
                         </g>
                        </svg>
-                       </div>4
+                       </div>
                       </div>
 
 
