--- a/404.html
+++ b/404.html
@@ -58,9 +58,9 @@ title: Plot Twist
 		<div class="container">
 		<div class="row">
 			<div class="getstartarea">
-			 <div class="page404">
-                          <div class="page404-heading">
-                           4<div class="page404-bars">
+				<div class="page404">
+                    <div class="page404-heading">
+                        <div class="page404-bars">
                             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"     y="0px" width="40px" height="40px" viewBox="0 0 304.128 246.216" enable-background="new 0 0 304.128 246.216"
                       xml:space="preserve">
                           <g>
@@ -113,6 +113,8 @@ title: Plot Twist
 		            </div>
 		        </div>
 	        </div>
-	        {% include footer.html %}
+	    </div>
+	</div>
+	{% include footer.html %}
 	</body>
 </html>
