Added new layout for all the pages, fixed the border issue in iframes

--- a/_posts/matlab/treemap/2015-10-30-treemap-index.html
+++ b/_posts/matlab/treemap/2015-10-30-treemap-index.html
@@ -8,7 +8,7 @@ thumbnail: thumbnail/treemap.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
-display_as: maps
+display_as: scientific
 order: 22
 ---
 {% assign examples = site.posts | where:"language","matlab" | where:"suite","treemaps" | sort: "order" %}
