--- a/_posts/python/network/2015-06-30-networkx.html
+++ b/_posts/python/network/2015-06-30-networkx.html
@@ -7,7 +7,7 @@ thumbnail: thumbnail/net.jpg
 layout: user-guide
 name: Network Graphs
 language: python
-display_as: chart_type
+display_as: scientific
 has_thumbnail: true
 page_type: example_index
 order: 30
