--- a/_posts/matlab/insets/2015-04-09-insets_matlab_index.html
+++ b/_posts/matlab/insets/2015-04-09-insets_matlab_index.html
@@ -8,7 +8,7 @@ thumbnail: thumbnail/insets.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
-display_as: basic
+display_as: layout_opt
 ---
 {% assign examples = site.posts | where:"language","matlab" | where:"suite","insets" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
