--- a/_posts/matlab/multiple-axes/2015-04-09-multiple-axes_matlab_index.html
+++ b/_posts/matlab/multiple-axes/2015-04-09-multiple-axes_matlab_index.html
@@ -8,7 +8,7 @@ thumbnail: thumbnail/multiple-axes.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
-display_as: basic
+display_as: layout_opt
 ---
 {% assign examples = site.posts | where:"language","matlab" | where:"suite","multiple-axes" | sort: "order" %}
 {% include auto_examples.html examples=examples %}
