--- a/_posts/matlab/streamline/2015-07-20-streamline-index.html
+++ b/_posts/matlab/streamline/2015-07-20-streamline-index.html
@@ -8,7 +8,7 @@ thumbnail: thumbnail/streamline.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
-display_as: chart_type
+display_as: scientific
 order: 19
 ---
 {% assign examples = site.posts | where:"language","matlab" | where:"suite","streamline-plots" | sort: "order" %}
