--- a/_posts/python/chord/2015-06-30-chord.html
+++ b/_posts/python/chord/2015-06-30-chord.html
@@ -7,7 +7,7 @@ thumbnail: thumbnail/chord.jpg
 layout: user-guide
 name: Chord Diagram
 language: python
-display_as: chart_type
+display_as: scientific
 has_thumbnail: true
 page_type: example_index
 order: 31
