--- a/_posts/python/dendrogram/2015-06-30-dendrograms.html
+++ b/_posts/python/dendrogram/2015-06-30-dendrograms.html
@@ -7,7 +7,7 @@ thumbnail: thumbnail/dendrogram.jpg
 layout: user-guide
 name: Dendrograms
 language: python
-display_as: chart_type
+display_as: scientific
 has_thumbnail: true
 page_type: example_index
 order: 29
