--- a/_posts/python/distplot/2015-06-30-distplots.html
+++ b/_posts/python/distplot/2015-06-30-distplots.html
@@ -7,7 +7,7 @@ thumbnail: thumbnail/distplot.jpg
 layout: user-guide
 name: Distplots
 language: python
-display_as: chart_type
+display_as: statistical
 has_thumbnail: true
 page_type: example_index
 order: 24
