--- a/_posts/python/filled-chord/2015-06-30-filled-chord.html
+++ b/_posts/python/filled-chord/2015-06-30-filled-chord.html
@@ -7,7 +7,7 @@ thumbnail: thumbnail/filled-chord.jpg
 layout: user-guide
 name: Filled Chord Diagram
 language: python
-display_as: chart_type
+display_as: scientific
 has_thumbnail: true
 page_type: example_index
 order: 32
