--- a/_posts/python/network/2015-06-30-igraph_vs_networkx.html
+++ b/_posts/python/network/2015-06-30-igraph_vs_networkx.html
@@ -7,7 +7,7 @@ thumbnail: thumbnail/networks.jpg
 layout: user-guide
 name: Network Graphs Comparison
 language: python
-display_as: chart_type
+display_as: scientific
 has_thumbnail: true
 page_type: example_index
 order: 30
