--- a/_posts/python/streamline/2015-07-13-streamline_python_index.html
+++ b/_posts/python/streamline/2015-07-13-streamline_python_index.html
@@ -8,7 +8,7 @@ thumbnail: thumbnail/streamline.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
-display_as: chart_type
+display_as: scientific
 order: 23
 ---
 {% assign examples = site.posts | where:"language","python" | where:"suite","streamline-plots" | sort: "order" %}
