--- a/_posts/python/subplots/2015-04-09-subplots_python_index.html
+++ b/_posts/python/subplots/2015-04-09-subplots_python_index.html
@@ -8,7 +8,7 @@ thumbnail: thumbnail/subplots.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
-display_as: basic
+display_as: layout_opt
 order: 26
 ---
 {% assign examples = site.posts | where:"language","python" | where:"suite","subplots" | sort: "order" %}
