--- a/_posts/python/tree-plot/2015-06-30-tree-plot.html
+++ b/_posts/python/tree-plot/2015-06-30-tree-plot.html
@@ -7,7 +7,7 @@ thumbnail: thumbnail/treeplot.jpg
 layout: user-guide
 name: Tree-plots
 language: python
-display_as: chart_type
+display_as: scientific
 has_thumbnail: true
 page_type: example_index
 order: 29
