Updated Plot twist (404) page

--- a/404.html
+++ b/404.html
@@ -7,9 +7,30 @@ title: Plot Twist
 	{% include head.html %}
 
 	<body>
+<div id="header" style="
+  background-image: url('http://images.plot.ly/excel/plotlyjs/plotlyjs-banner-background.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 100%;
+  background-position: center top;
+  width: 100%;
+  height: 350px;
+  position: relative;
+  ">
+
+	{% include header.html %}
+  <div style="
+    background-image: linear-gradient(0deg, rgba(100,91,158, 0.89)  0%, rgba(58,124,187, 0.89) 100%);
+    width: 100%;
+    height: 100%;
+  "></div>
+  
+    <!-- Lang Banner -->
+    {% include lang-splash-banner.html %}
+
+</div>
 
 	<div class="allcontent">
-	{% include header-white.html %}
 
         <style>
         .page404 {
