--- a/_posts/user_guide_python/2015-06-30-Plotly Offline.html
+++ b/_posts/user_guide_python/2015-06-30-Plotly Offline.html
@@ -5,7 +5,7 @@ title: Plotly Offline for IPython Notebooks
 name: Plotly Offline
 has_thumbnail: false
 thumbnail: /images/static-image
-layout: base
+layout: user-guide
 page_type: u-guide
 language: python
 ---
