Plots load as they scroll into view

--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -239,7 +239,16 @@ Plotly.plot('my-graph', data, layout);
 
 
 <script type="text/javascript">
-    function plotLifeExpectancy(){
+    var windspeed = document.getElementById('wind-speed'),
+        contour = document.getElementById('contour-plot'),
+        myGraph = document.getElementById('my-graph'),
+        plots = [
+            { element: windspeed, plotted: false, doPlot: plotWindspeed },
+            { element: contour, plotted: false, doPlot: plotTurbulenceSimulation },
+            { element: myGraph, plotted: false, doPlot: plotLifeExpectancy }
+        ];
+
+    function plotLifeExpectancy(element){
       var data = [{
         "name":"Asia",
         "text": ["Afghanistan","Bahrain","Bangladesh","Cambodia","China",
@@ -401,10 +410,10 @@ Plotly.plot('my-graph', data, layout);
         hovermode: 'closest'
       };
 
-      Plotly.plot('my-graph', data, layout, {showLink: false});
+      Plotly.plot(element, data, layout, {showLink: false});
     }
 
-    function plotTurbulenceSimulation(){
+    function plotTurbulenceSimulation(element){
       var data = [{
         "colorbar": {"ypad":0 },
         "autocolorscale": false,
@@ -586,10 +595,10 @@ Plotly.plot('my-graph', data, layout);
         }]
       };
 
-      Plotly.plot(document.getElementById('contour-plot'), data, layout, {showLink: false});
+      Plotly.plot(element, data, layout, {showLink: false});
     }
 
-    function plotWindspeed () {
+    function plotWindspeed (element) {
       var data = [{
         "y":["22.3","23","23.3","22","20.5","25.2","24.8","24","22.9","17.9","20.3","21.5","21.3","21.3","21.3","22.4","25.4","25.9","25.5","25.7","23.9","24.7","26.3","26.9","29","24.4","21.4","20","18.3","17.1","17.6","16.7","11.4","16.6","16.1","16","17","17.2","17.1","16.8","16.6","17.5","17.1","18.6","18.4","15","16","16.5","18.7","16.7","14.7","13.6","16","15.9","16.2","17.7","16.2","15.9","15.4","18.3","18.1","19.2","17.5","16","14.9","15.4","14.7","15.5","17.4","14.1","14","13","14.7","14.2","15","14.3","14.7","15.9","17.7","16.1","15.3","15.2","14.7","15.9","14.8","15.2","14.5","15.1","15.2","15.3","15.2","14.9","15.4","15.3","14.5","15.7","15","14","11.3","11.8","12.1","12.3","12.3","12.2","11.8","9.3","8.7","9.5","8.9","7.2","8","7.9","5.5","4.9","8.9","8.6","12.1","15","13.8","14.9","15.9","19.6","24.9","19.2","21.7","13.5","17.2","28.5","29.9","30.9","27.8","26.1","23.6","17.4","18.6","12.1","14.9","13.8","13.3","10.7","12.2","17.8","17.8","18.3","11.3","16.8","8.7","14.4","12.3","15.4","10","15.1","14.8","12.8","9.6","12.5","15.5","18.9","19.8","20.4","19.3","20.6","22.3","22.6","21","23.3","21.9","22.8","24.6","24","25","26.9","28.4","27.1","24.4","24.4","28.8","28.9","28.5","27.5","24.9","27","25.7","26.6","25.2","28.6","32.5","32.7","30.2","30","24.9","25.7","24.5","24.5","26.7","25.9","27.5","28.2","26.2","26.8","26.7","26.7","25.5","25.4","24.9","25.2","27.8","27.1","26.8","27.6","26.6","26.4","27.1","24.7","23.1","22.1","22","21.2","22.9","21.6","22.2"],
         "x":["2001-06-11 11:00","2001-06-11 11:10","2001-06-11 11:20","2001-06-11 11:30","2001-06-11 11:40","2001-06-11 11:50","2001-06-11 12:00","2001-06-11 12:10","2001-06-11 12:20","2001-06-11 12:30","2001-06-11 12:40","2001-06-11 12:50","2001-06-11 13:00","2001-06-11 13:10","2001-06-11 13:20","2001-06-11 13:30","2001-06-11 13:40","2001-06-11 13:50","2001-06-11 14:00","2001-06-11 14:10","2001-06-11 14:20","2001-06-11 14:30","2001-06-11 14:40","2001-06-11 14:50","2001-06-11 15:00","2001-06-11 15:10","2001-06-11 15:20","2001-06-11 15:30","2001-06-11 15:40","2001-06-11 15:50","2001-06-11 16:00","2001-06-11 16:10","2001-06-11 16:20","2001-06-11 16:30","2001-06-11 16:40","2001-06-11 16:50","2001-06-11 17:00","2001-06-11 17:10","2001-06-11 17:20","2001-06-11 17:30","2001-06-11 17:40","2001-06-11 17:50","2001-06-11 18:00","2001-06-11 18:10","2001-06-11 18:20","2001-06-11 18:30","2001-06-11 18:40","2001-06-11 18:50","2001-06-11 19:00","2001-06-11 19:10","2001-06-11 19:20","2001-06-11 19:30","2001-06-11 19:40","2001-06-11 19:50","2001-06-11 20:00","2001-06-11 20:10","2001-06-11 20:20","2001-06-11 20:30","2001-06-11 20:40","2001-06-11 20:50","2001-06-11 21:00","2001-06-11 21:10","2001-06-11 21:20","2001-06-11 21:30","2001-06-11 21:40","2001-06-11 21:50","2001-06-11 22:00","2001-06-11 22:10","2001-06-11 22:20","2001-06-11 22:30","2001-06-11 22:40","2001-06-11 22:50","2001-06-11 23:00","2001-06-11 23:10","2001-06-11 23:20","2001-06-11 23:30","2001-06-11 23:40","2001-06-11 23:50","2001-06-12 00:00","2001-06-12 00:10","2001-06-12 00:20","2001-06-12 00:30","2001-06-12 00:40","2001-06-12 00:50","2001-06-12 01:00","2001-06-12 01:10","2001-06-12 01:20","2001-06-12 01:30","2001-06-12 01:40","2001-06-12 01:50","2001-06-12 02:00","2001-06-12 02:10","2001-06-12 02:20","2001-06-12 02:30","2001-06-12 02:40","2001-06-12 02:50","2001-06-12 03:00","2001-06-12 03:10","2001-06-12 03:20","2001-06-12 03:30","2001-06-12 03:40","2001-06-12 03:50","2001-06-12 04:00","2001-06-12 04:10","2001-06-12 04:20","2001-06-12 04:30","2001-06-12 04:40","2001-06-12 04:50","2001-06-12 05:00","2001-06-12 05:10","2001-06-12 05:20","2001-06-12 05:30","2001-06-12 05:40","2001-06-12 05:50","2001-06-12 06:00","2001-06-12 06:10","2001-06-12 06:20","2001-06-12 06:30","2001-06-12 06:40","2001-06-12 06:50","2001-06-12 07:00","2001-06-12 07:10","2001-06-12 07:20","2001-06-12 07:30","2001-06-12 07:40","2001-06-12 07:50","2001-06-12 08:00","2001-06-12 08:10","2001-06-12 08:20","2001-06-12 08:30","2001-06-12 08:40","2001-06-12 08:50","2001-06-12 09:00","2001-06-12 09:10","2001-06-12 09:20","2001-06-12 09:30","2001-06-12 09:40","2001-06-12 09:50","2001-06-12 10:00","2001-06-12 10:10","2001-06-12 10:20","2001-06-12 10:30","2001-06-12 10:40","2001-06-12 10:50","2001-06-12 11:00","2001-06-12 11:10","2001-06-12 11:20","2001-06-12 11:30","2001-06-12 11:40","2001-06-12 11:50","2001-06-12 12:00","2001-06-12 12:10","2001-06-12 12:20","2001-06-12 12:30","2001-06-12 12:40","2001-06-12 12:50","2001-06-12 13:00","2001-06-12 13:10","2001-06-12 13:20","2001-06-12 13:30","2001-06-12 13:40","2001-06-12 13:50","2001-06-12 14:00","2001-06-12 14:10","2001-06-12 14:20","2001-06-12 14:30","2001-06-12 14:40","2001-06-12 14:50","2001-06-12 15:00","2001-06-12 15:10","2001-06-12 15:20","2001-06-12 15:30","2001-06-12 15:40","2001-06-12 15:50","2001-06-12 16:00","2001-06-12 16:10","2001-06-12 16:20","2001-06-12 16:30","2001-06-12 16:40","2001-06-12 16:50","2001-06-12 17:00","2001-06-12 17:10","2001-06-12 17:20","2001-06-12 17:30","2001-06-12 17:40","2001-06-12 17:50","2001-06-12 18:00","2001-06-12 18:10","2001-06-12 18:20","2001-06-12 18:30","2001-06-12 18:40","2001-06-12 18:50","2001-06-12 19:00","2001-06-12 19:10","2001-06-12 19:20","2001-06-12 19:30","2001-06-12 19:40","2001-06-12 19:50","2001-06-12 20:00","2001-06-12 20:10","2001-06-12 20:20","2001-06-12 20:30","2001-06-12 20:40","2001-06-12 20:50","2001-06-12 21:00","2001-06-12 21:10","2001-06-12 21:20","2001-06-12 21:30","2001-06-12 21:40","2001-06-12 21:50","2001-06-12 22:00","2001-06-12 22:10","2001-06-12 22:20","2001-06-12 22:30","2001-06-12 22:40","2001-06-12 22:50","2001-06-12 23:00","2001-06-12 23:10","2001-06-12 23:20","2001-06-12 23:30","2001-06-12 23:40"],
@@ -607,22 +616,48 @@ Plotly.plot('my-graph', data, layout);
         margin: {l: 60, b: 37, t: 0, r: 20}
       };
 
-      Plotly.plot(document.getElementById('wind-speed'), data, layout, {showLink: false});
+      Plotly.plot(element, data, layout, {showLink: false});
     }
 
-    var plots = [
-      document.getElementById('wind-speed'),
-      document.getElementById('contour-plot'),
-      document.getElementById('my-graph')
-    ];
+    function plotAll(){
+      console.log('checking');
+        plots.forEach(function(plot){
+            var elementBox = plot.element.getBoundingClientRect(),
+                topVisible = elementBox.top < window.innerHeight * 1.5,
+                bottomVisible = elementBox.bottom > window.innerHeight * 0.5,
+                visible = topVisible && bottomVisible;
 
-    plotLifeExpectancy();
-    plotTurbulenceSimulation();
-    plotWindspeed();
+            if(!plot.plotted && visible){
+                plot.doPlot(plot.element);
+                plot.plotted = true;
+            }
+        });
+    }
+
+    function debounce(func, wait, immediate) {
+        var timeout;
+        return function() {
+            var context = this,
+                args = arguments;
+
+            var later = function() {
+                timeout = null;
+                if (!immediate) func.apply(context, args);
+            };
+            var callNow = immediate && !timeout;
+            clearTimeout(timeout);
+            timeout = setTimeout(later, wait);
+            if (callNow) func.apply(context, args);
+        };
+    };
+
+    window.addEventListener('scroll', debounce(plotAll, 100));
 
     window.addEventListener("resize", function(){
-      plots.forEach(function (plot) {
-        Plotly.Plots.resize(plot, { showLink: false });
-      });
+        plots.forEach(function (plot) {
+            Plotly.Plots.resize(plot, { showLink: false });
+        });
     });
+
+    plotAll();
 </script>
