Fixed missing field on plot resize eventlistener

--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -655,7 +655,7 @@ Plotly.plot('my-graph', data, layout);
 
     window.addEventListener("resize", function(){
         plots.forEach(function (plot) {
-            Plotly.Plots.resize(plot, { showLink: false });
+            Plotly.Plots.resize(plot.element, { showLink: false });
         });
     });
 
