--- a/_posts/pandas/subplots/2015-06-30-subplots.html
+++ b/_posts/pandas/subplots/2015-06-30-subplots.html
@@ -1,5 +1,5 @@
 ---
-permalink: /pandas/subplots
+permalink: pandas/subplots
 description: How to create a chart with subplots, or small multiples, with Pandas in Python.
 name: Subplots in Pandas | Examples | plotly
 has_thumbnail: true
