--- a/_posts/pandas/multiple-axes/2015-06-30-multiple-yaxes.html
+++ b/_posts/pandas/multiple-axes/2015-06-30-multiple-yaxes.html
@@ -1,5 +1,5 @@
 ---
-permalink: /pandas/multiple-axes
+permalink: pandas/multiple-axes
 description: How to create a chart with multiple axes with Pandas in Plotly.
 name: Multiple Axes in Pandas | Examples | plotly
 has_thumbnail: true
