--- a/_posts/2015-05-25-ipython-notebooks_gallery.html
+++ b/_posts/2015-05-25-ipython-notebooks_gallery.html
@@ -3,17 +3,12 @@ title: IPython Notebook Gallery
 name: IPython Notebook Gallery
 permalink: /ipython-notebooks/gallery
 description: Get started with IPython notebooks with this set of examples. A collection of practical IPython notebooks for interactive graphing with Plotly, data science, technical computing, and more.
-layout: getstart
+layout: langindex
 language: python
 has_thumbnail: false
 ---
 
 <h1>IPython Notebook Gallery</h1>
-
-<div class="row btnrow">
-    <a href="/ipython-notebooks/" class="button no_underline">Getting Started</a>
-    <a href="/ipython-notebooks/gallery" class="button no_underline">Notebook Gallery</a>
-</div>
 
 <p>
     Instructions on how to install Plotly's Python package can be found on the <a class="no_underline plot-blue" href="{{ site.url }}/python/getting-started">Plotly for Python getting started page</a>.
