Fixed sidebar to include 'Plotly Offline' in QUick Start

--- a/_posts/user_guide_matlab/2015-06-30-Plotly Offline.html
+++ b/_posts/user_guide_matlab/2015-06-30-Plotly Offline.html
@@ -4,7 +4,7 @@ description: How to use Plotly offline using fig2plotly and MATLAB
 title: Plotly Offline for Plotlys MATLAB Library
 has_thumbnail: false
 thumbnail: /images/static-image
-layout: base
+layout: user-guide
 page_type: u-guide
 language: matlab
 ---
