--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -201,7 +201,7 @@ Plotly.plot('my-graph', data, layout);
         </div>
         <div style="position: relative;" class="row">
             <div class="js-splash--inline-image-left">
-                <a class="image-link" style="display: inline-block;" href="https://plot.ly/~chris/17389.embed"><img style="width: 100%" src="https://plot.ly/~chriddyp/1771/hue-value-vs.png"/></a>
+                <a class="image-link" style="display: inline-block;" href="https://plot.ly/~chris/17389.embed"><img style="width: 100%" src="{{site.imgurl}}images/hue-value-vs.jpg"/></a>
             </div>
             <div class="js-splash--inline-text-right">
                 This chart was drawn with the <code>plotly.js</code> chart type <code>scattergl</code>. <code>scattergl</code> charts render an order of magnitude faster than their SVG counterparts.<br>
@@ -210,7 +210,7 @@ Plotly.plot('my-graph', data, layout);
         <div style="position: relative; width: 100%" class="row">
             <div class="js-splash--inline-image-right">
                 <a class="image-link" style="display: inline-block; width: 100%;" href="https://plot.ly/~chriddyp/1780.embed">
-                <img style="width: 100%;" src="https://plot.ly/~chriddyp/1780.png"/>
+                <img style="width: 100%;" src="{{site.imgurl}}images/surface-plot.jpg"/>
                 </a>
             </div>
             <div class="js-splash--inline-text-left">
