Optimized image for turbulence simulation.

--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -91,7 +91,7 @@ Plotly.plot('my-graph', data, layout);
 
     <!-- <div class="graph" style="height: 75vh" id="contour-plot"></div> -->
     <div style="border: 1px solid #C2C2C2; width: 100%; text-align: center;">
-        <a class="image-link" style="display: inline-block;" href="https://plot.ly/~mdtusz/72.embed"><img style="width: 100%" src="https://plot.ly/~mdtusz/72.png?width=1000&height=600"/></a>
+        <a class="image-link" style="display: inline-block;" href="https://plot.ly/~mdtusz/72.embed"><img style="width: 100%" src="{{site.imgurl}}images/turbulence-simulation.jpg"/></a>
     </div>
     <pre><code class="js-splash--code-block">
   var data = [{
