--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@ title: Plot Twist
 
 	<body>
 <div id="header" style="
-  background-image: url('http://images.plot.ly/excel/plotlyjs/plotlyjs-banner-background.png');
+  background-image: url('https://images.plot.ly/excel/plotlyjs/plotlyjs-banner-background.png');
   background-repeat: no-repeat;
   background-size: cover;
   max-width: 100%;
