Fixed LaTeX issue, added link to source code

--- a/_posts/python/alpha-shapes/2016-01-15-alpha_shapes.html
+++ b/_posts/python/alpha-shapes/2016-01-15-alpha_shapes.html
@@ -37,7 +37,7 @@ order: 29
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>This notebook is devoted to the presentation of the  alpha shape as a computational geometric object, its interpretation, and visualization with Plotly.</p>
+<p>This notebook is devoted to the presentation of the  alpha shape as a computational geometric object, its interpretation, and visualization with Plotly. <a href="https://github.com/plotly/documentation/tree/alpha-shapes/_posts/python/alpha-shapes">The Notebook code and data files are available here</a></p>
 <p>Alpha shape of a finite point set $S$ is a <a href="https://en.wikipedia.org/wiki/Polytope">polytope</a> whose structure depends only on the set $S$ and a parameter $\alpha$.</p>
 <p>Although it is less known in comparison to other computational geometric objects,  it has been used in many  practical applications in pattern recognition, surface reconstruction, molecurar structure modeling, porous media, astrophysics.</p>
 
@@ -112,8 +112,9 @@ order: 29
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>If $T$ is the set of points defining a $k$-simplex, then any proper subset of $T$ defines an $\ell$-simplex, with $\ell<k$.
-These $\ell$-simplexes (or $\ell$-simplices) are called faces.</p>
+<p>If $T$ is the set of points defining a $k$-simplex, then any proper subset of 
+$T$ defines an $\ell$-simplex, <br />with $\ell$<$k$.</p>
+<p>These $\ell$-simplexes (or $\ell$-simplices) are called faces.</p>
 <p>A 2-simplex has three $1$-simplexes, and three 0-simplexes as faces, whereas a tetrahedron has as faces three  2-simplexes, six 1-simplexes and four zero simplexes.</p>
 
 </div>
