Canonical tag update to index.html

--- a/dashboards/index.html
+++ b/dashboards/index.html
@@ -38,6 +38,7 @@
     	<!-- SEO Tags - title, meta_description -->
     <title>Plotly Online Dashboards</title>
     <meta name="description" content="Create dashboards for free online. Plotly online dashboards for insurance, sales, energy, manufacturing, weather and more">
+    <link rel="canonical" href="https://plot.ly/dashboards/ />
 
 <!-- Bing tags -->
     <meta name="msvalidate.01" content="D319859A832F9F1D15A7646E2A42150A" />
@@ -46,7 +47,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="http://help.plot.ly/images/twitter-default.png">
     <meta property="og:description" content="Create dashboards for free online. Plotly online dashboards for insurance, sales, energy, manufacturing, weather and more"/>
-    <meta property="og:url" />
+    <meta property="og:url" content="http://dashboards.ly/" />
     <meta property="fb:admins" content="1123751525"/>
     <meta property="fb:admins" content="22418"/>
 
