Add canonical tag to plot.ly/dashboards
SEO change.

--- a/dashboards/energy-monitoring/index.html
+++ b/dashboards/energy-monitoring/index.html
@@ -5,22 +5,23 @@
 <!-- SEO Tags - title, meta_description -->
     <title>Energy Monitoring Dashboard</title>
     <meta name="description" content="Energy monitoring dashboard with KPIs for electricity usage, solar and wind energy analytics, wind power prospecting and analytics, and more.">
+    <link rel="canonical" href="https://plot.ly/dashboards/energy-monitoring/" />
 
-<!-- Bing tags -->
+ <!-- Bing tags -->
     <meta name="msvalidate.01" content="D319859A832F9F1D15A7646E2A42150A" />
 <!-- Facebook tags -->
     <meta property="og:title" content="Energy Monitoring Dashboard"/>
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="http://help.plot.ly/images/twitter-default.png">
     <meta property="og:description" content="Energy monitoring dashboard with KPIs for electricity usage, solar and wind energy analytics, wind power prospecting and analytics, and more."/>
-    <meta property="og:url" />
+    <meta property="og:url" content="https://plot.ly/dashboards/energy-monitoring/" />
     <meta property="fb:admins" content="1123751525"/>
     <meta property="fb:admins" content="22418"/>
 
 <!-- twitter tags -->
     <meta name="twitter:card" content="photo" />
     <meta name="twitter:title" content="Energy Monitoring Dashboard"/>
-    <meta name="twitter:url" content="http://help.plot.lydashboards/energy-monitoring/"/>
+    <meta name="twitter:url" content="http://help.plot.ly/dashboards/energy-monitoring/"/>
     <meta name="twitter:description" content="Energy monitoring dashboard with KPIs for electricity usage, solar and wind energy analytics, wind power prospecting and analytics, and more."/>
     <meta name="twitter:image" content="http://help.plot.ly/images/twitter-default.png">
     <meta name="twitter:site" content="@plotlygraphs"/>
