Add canonical tag to insurance dashboards page
SEO change for head, Facebook and Twitter tags

--- a/dashboards/insurance/index.html
+++ b/dashboards/insurance/index.html
@@ -5,6 +5,7 @@
 <!-- SEO Tags - title, meta_description -->
     <title>Insurance Dashboard</title>
     <meta name="description" content="Insurance dashboard with KPIs for claims analysis, insurance plans customer satisfaction, stochastic modeling for the insurance industry, and more.">
+    <link rel="canonical" href="https://plot.ly/dashboards/insurance/" />
 
 <!-- Bing tags -->
     <meta name="msvalidate.01" content="D319859A832F9F1D15A7646E2A42150A" />
@@ -13,14 +14,14 @@
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="http://help.plot.ly/images/twitter-default.png">
     <meta property="og:description" content="Insurance dashboard with KPIs for claims analysis, insurance plans customer satisfaction, stochastic modeling for the insurance industry, and more."/>
-    <meta property="og:url" />
+    <meta property="og:url" content="https://plot.ly/dashboards/insurance/" />
     <meta property="fb:admins" content="1123751525"/>
     <meta property="fb:admins" content="22418"/>
 
 <!-- twitter tags -->
     <meta name="twitter:card" content="photo" />
     <meta name="twitter:title" content="Insurance Dashboard"/>
-    <meta name="twitter:url" content="http://help.plot.lydashboards/insurance/"/>
+    <meta name="twitter:url" content="https://plot.ly/dashboards/insurance/"/>
     <meta name="twitter:description" content="Insurance dashboard with KPIs for claims analysis, insurance plans customer satisfaction, stochastic modeling for the insurance industry, and more."/>
     <meta name="twitter:image" content="http://help.plot.ly/images/twitter-default.png">
     <meta name="twitter:site" content="@plotlygraphs"/>
