Canonical link to IoT Raspberry Pi

--- a/dashboards/iot-rasberry-pi/index.html
+++ b/dashboards/iot-rasberry-pi/index.html
@@ -5,6 +5,7 @@
 <!-- SEO Tags - title, meta_description -->
     <title>IoT Raspberry Pi Dashboard</title>
     <meta name="description" content="Internet-of-things dashboard of sensor readings streamed from a Rasberry Pi embedded system.">
+    <link rel="canonical" href="https://plot.ly/dashboards/iot-rasberry-pi/" />
 
 <!-- Bing tags -->
     <meta name="msvalidate.01" content="D319859A832F9F1D15A7646E2A42150A" />
@@ -13,14 +14,14 @@
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="http://help.plot.ly/images/twitter-default.png">
     <meta property="og:description" content="Internet-of-things dashboard of sensor readings streamed from a Rasberry Pi embedded system."/>
-    <meta property="og:url" />
+    <meta property="og:url" content=https://plot.ly/dashboards/iot-rasberry-pi/ />
     <meta property="fb:admins" content="1123751525"/>
     <meta property="fb:admins" content="22418"/>
 
 <!-- twitter tags -->
     <meta name="twitter:card" content="photo" />
     <meta name="twitter:title" content="IoT Raspberry Pi Dashboard"/>
-    <meta name="twitter:url" content="http://help.plot.lydashboards/iot-rasberry-pi/"/>
+    <meta name="twitter:url" content="https://plot.ly/dashboards/iot-rasberry-pi/" />
     <meta name="twitter:description" content="Internet-of-things dashboard of sensor readings streamed from a Rasberry Pi embedded system."/>
     <meta name="twitter:image" content="http://help.plot.ly/images/twitter-default.png">
     <meta name="twitter:site" content="@plotlygraphs"/>
