--- a/_posts/dashboards/2015-08-20-sales.html
+++ b/_posts/dashboards/2015-08-20-sales.html
@@ -1,7 +1,7 @@
 ---
 title: Sales Dashboard
 name: Sales Dashboard
-description: Sales dashboard with KPIs for sales call centers, Salesforce analytics, revenue by geography, sales rep, and more. 
+description: Sales dashboard with KPIs for sales call centers, Salesforce analytics, revenue by geography, sales rep, and more.
 permalink: dashboards/sales/
 industry: Sales
 language: dashboard
@@ -18,12 +18,14 @@ foreground_color: '#444'
 
 {% include dashboard-industries-nav.html %}
 
+{% include dashboards-preamble.html %}
+
 <div class="container-fluid">
 
   <!--------------------------->
   <!-- SALES REP PERFORMANCE -->
   <!------------------------ -->
-  <h2>Dashboard charts of Call center and sales rep performance</h2>
+  <h2>Call center and sales rep performance</h2>
 
   <div class="row">
     <div class="col-sm-8">
@@ -63,7 +65,7 @@ foreground_color: '#444'
   <!------------------------>
   <!-- SALES BY GEOGRAPHY -->
   <!--------------------- -->
-  <h2>Dashboard charts of Sales revenue by geography</h2>
+  <h2>Sales revenue by geography</h2>
 
   <div class="row">
     <div class="col-sm-8">
@@ -77,13 +79,13 @@ foreground_color: '#444'
             <option value="1">Quarter 2</option>
             <option value="2">Quarter 3</option>
             <option value="3">Quarter 4</option>
-          </select>        
-          <iframe id="usaSalesPlot" width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/11579.embed?autoscale=true&link=false&modebar=false"></iframe>        
+          </select>
+          <iframe id="usaSalesPlot" width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/11579.embed?autoscale=true&link=false&modebar=false"></iframe>
         </div>
         <div class="chart-notes">
           <a href="https://plot.ly/11579/~jackp"><i class="icon-edit"></i> Copy & Edit</a>
           <a href="https://plot.ly/~jackp/11579" style="float:right"><i class="fa fa-comment"></i> Comment</a>
-        </div>  
+        </div>
       </div>
     </div>
 
@@ -92,8 +94,8 @@ foreground_color: '#444'
         <div class="chart-title">
           Q4 sales by region
         </div>
-        <div class="chart-stage">        
-          <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/11634.embed?autoscale=true&link=false&modebar=false"></iframe> 
+        <div class="chart-stage">
+          <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/11634.embed?autoscale=true&link=false&modebar=false"></iframe>
         </div>
         <div class="chart-notes">
           <a href="https://plot.ly/11634/~jackp"><i class="icon-edit"></i> Copy & Edit</a>
@@ -106,7 +108,7 @@ foreground_color: '#444'
   <!-------------------------->
   <!-- SALESFORCE ANALYTICS -->
   <!----------------------- -->
-  <h2>Dashboard charts of Salesforce Analytics in Python</h2>
+  <h2>Salesforce Analytics in Python</h2>
   <a href="https://plot.ly/ipython-notebooks/salesforce/">IPython notebook analysis</a>
 
   <div class="row">
@@ -116,7 +118,7 @@ foreground_color: '#444'
           Open deals in Salesforce
         </div>
         <div class="chart-stage">
-          <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/11654.embed?autoscale=true&link=false&modebar=false"></iframe>        
+          <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/11654.embed?autoscale=true&link=false&modebar=false"></iframe>
         </div>
         <div class="chart-notes">
           <a href="https://plot.ly/11654/~jackp"><i class="icon-edit"></i> Copy & Edit</a>
@@ -129,8 +131,8 @@ foreground_color: '#444'
         <div class="chart-title">
           Month Revenue vs Target
         </div>
-        <div class="chart-stage">       
-          <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/11648.embed?autoscale=true&link=false&modebar=false"></iframe> 
+        <div class="chart-stage">
+          <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/11648.embed?autoscale=true&link=false&modebar=false"></iframe>
         </div>
         <div class="chart-notes">
           <a href="https://plot.ly/11648/~jackp"><i class="icon-edit"></i> Copy & Edit</a>
@@ -172,7 +174,7 @@ function addData() {
 
 window.addEventListener('message', function(e) {
     var message = e.data;
-  
+
     if (message.pong) {
       console.log('Initial pong, \
          frame is ready to receive');
@@ -180,8 +182,8 @@ window.addEventListener('message', function(e) {
       clearInterval();
       startTimer();
       return;
-    }    
-  
+    }
+
     X = message.response['data[0].x'];
     Y = message.response['data[0].y'];
 
@@ -208,16 +210,16 @@ window.addEventListener('message', function(e) {
       Y = [ normal()*10+30 ];
     }
     else{
-      // append new data  
+      // append new data
       dY = normal()*10+30;
       X.push( dt );
       Y.push( dY );
     }
-    
+
     if( X.length > 100 ){
       X.shift(); Y.shift();
     }
-    
+
     plot.postMessage({
       task: 'restyle',
       update: { x: [X], y: [Y] }
