--- a/_posts/dashboards/2015-08-20-marketing.html
+++ b/_posts/dashboards/2015-08-20-marketing.html
@@ -24,7 +24,7 @@ foreground_color: '#444'
   <!-- LEAD GENERATION -->
   <!------------------ -->
 
-  <h2>Dashboard charts of Lead generation</h2>
+  <h2>Lead generation metrics</h2>
 
   <div class="row">
     <div class="col-sm-6">
@@ -57,7 +57,7 @@ foreground_color: '#444'
         <div class="chart-notes">
           <a href="https://plot.ly/12273/~jackp"><i class="icon-edit"></i> Copy & Edit</a>
           <a href="https://plot.ly/~jackp/12273" style="float:right"><i class="fa fa-comment"></i> Comment</a>
-        </div>                
+        </div>
       </div>
     </div>
 
@@ -84,7 +84,7 @@ foreground_color: '#444'
   <!-- CLICK THROUGH RATE AND CONVERSION -->
   <!------------------------------------ -->
 
-  <h2>Dashboard charts of Click-through rate (CTR) and conversions</h2>
+  <h2>Click-through rate (CTR) and conversion metrics</h2>
 
   <div class="row">
     <div class="col-sm-6">
@@ -100,11 +100,11 @@ foreground_color: '#444'
             <div class="chart-notes">
               <a href="https://plot.ly/12286/~jackp"><i class="icon-edit"></i> Copy & Edit</a>
               <a href="https://plot.ly/~jackp/12286" style="float:right"><i class="fa fa-comment"></i> Comment</a>
-            </div>            
+            </div>
           </div>
         </div>
       </div>
-    </div>    
+    </div>
 
     <div class="col-sm-6">
       <div class="chart-wrapper">
@@ -117,9 +117,9 @@ foreground_color: '#444'
         <div class="chart-notes">
           <a href="https://plot.ly/12302/~jackp"><i class="icon-edit"></i> Copy & Edit</a>
           <a href="https://plot.ly/~jackp/12302" style="float:right"><i class="fa fa-comment"></i> Comment</a>
-        </div>          
+        </div>
       </div>
-    </div>    
+    </div>
 
     <div class="col-sm-6">
       <div class="chart-wrapper">
@@ -132,7 +132,7 @@ foreground_color: '#444'
         <div class="chart-notes">
           <a href="https://plot.ly/12319/~jackp"><i class="icon-edit"></i> Copy & Edit</a>
           <a href="https://plot.ly/~jackp/12319" style="float:right"><i class="fa fa-comment"></i> Comment</a>
-        </div>        
+        </div>
       </div>
     </div>
 
@@ -147,17 +147,17 @@ foreground_color: '#444'
         <div class="chart-notes">
           <a href="https://plot.ly/12323/~jackp"><i class="icon-edit"></i> Copy & Edit</a>
           <a href="https://plot.ly/~jackp/12323" style="float:right"><i class="fa fa-comment"></i> Comment</a>
-        </div>        
+        </div>
       </div>
-    </div>        
+    </div>
 
-  </div> 
+  </div>
 
   <!------------------>
   <!-- SOCIAL MEDIA -->
   <!--------------- -->
 
-  <h2>Dashboard charts of Social media</h2>
+  <h2>Social media metrics</h2>
 
   <div class="row">
     <div class="col-sm-12">
@@ -173,7 +173,7 @@ foreground_color: '#444'
             <div class="chart-notes">
               <a href="https://plot.ly/12359/~jackp"><i class="icon-edit"></i> Copy & Edit</a>
               <a href="https://plot.ly/~jackp/12359" style="float:right"><i class="fa fa-comment"></i> Comment</a>
-            </div>            
+            </div>
           </div>
         </div>
       </div>
@@ -190,7 +190,7 @@ foreground_color: '#444'
         <div class="chart-notes">
           <a href="https://plot.ly/12363/~jackp"><i class="icon-edit"></i> Copy & Edit</a>
           <a href="https://plot.ly/~jackp/12363" style="float:right"><i class="fa fa-comment"></i> Comment</a>
-        </div>        
+        </div>
       </div>
     </div>
 
@@ -205,7 +205,7 @@ foreground_color: '#444'
         <div class="chart-notes">
           <a href="https://plot.ly/12375/~jackp"><i class="icon-edit"></i> Copy & Edit</a>
           <a href="https://plot.ly/~jackp/12375" style="float:right"><i class="fa fa-comment"></i> Comment</a>
-        </div>        
+        </div>
       </div>
     </div>
 
@@ -220,7 +220,7 @@ foreground_color: '#444'
         <div class="chart-notes">
           <a href="https://plot.ly/12474/~jackp"><i class="icon-edit"></i> Copy & Edit</a>
           <a href="https://plot.ly/~jackp/12474" style="float:right"><i class="fa fa-comment"></i> Comment</a>
-        </div>        
+        </div>
       </div>
     </div>
 
@@ -235,11 +235,11 @@ foreground_color: '#444'
         <div class="chart-notes">
           <a href="https://plot.ly/12481/~jackp"><i class="icon-edit"></i> Copy & Edit</a>
           <a href="https://plot.ly/~jackp/12481" style="float:right"><i class="fa fa-comment"></i> Comment</a>
-        </div>        
+        </div>
       </div>
-    </div>    
+    </div>
 
-  </div> 
+  </div>
 
   <!--------------->
   <!-- RETENTION -->
@@ -261,7 +261,7 @@ foreground_color: '#444'
             <div class="chart-notes">
               <a href="https://plot.ly/12495/~jackp"><i class="icon-edit"></i> Copy & Edit</a>
               <a href="https://plot.ly/~jackp/12495" style="float:right"><i class="fa fa-comment"></i> Comment</a>
-            </div>            
+            </div>
           </div>
         </div>
       </div>
@@ -278,11 +278,11 @@ foreground_color: '#444'
         <div class="chart-notes">
           <a href="https://plot.ly/12501/~jackp"><i class="icon-edit"></i> Copy & Edit</a>
           <a href="https://plot.ly/~jackp/12501" style="float:right"><i class="fa fa-comment"></i> Comment</a>
-        </div>        
+        </div>
       </div>
     </div>
 
-  </div>   
+  </div>
 
 {% include dashboard-industries-footer.html %}
 
