--- a/_posts/dashboards/2015-08-20-manufacturing.html
+++ b/_posts/dashboards/2015-08-20-manufacturing.html
@@ -76,7 +76,7 @@ foreground_color: '#444'
     </div>
   </div>
     <!-- end of three -->
-  <div>
+  <div class="row">
     <div class="col-sm-6 col-md-4">
       <div class="chart-wrapper">
         <div class="chart-title">
