fix js code for examples missing plotly.d3

--- a/_posts/plotly_js/callbacks-hover/2015-10-08-hover-coupled.html
+++ b/_posts/plotly_js/callbacks-hover/2015-10-08-hover-coupled.html
@@ -8,6 +8,7 @@ arrangement: horizontal
 order: 2
 ---
 var myPlot = document.getElementById('myDiv'),
+    d3 = Plotly.d3,
     N = 12,
     x1 = d3.range(N).map( d3.random.normal() ),
     x2 = d3.range(N).map( d3.random.normal() ),
@@ -15,8 +16,8 @@ var myPlot = document.getElementById('myDiv'),
     y1 = d3.range(N).map( d3.random.normal() ),
     y2 = d3.range(N).map( d3.random.normal() ),
     y3 = d3.range(N).map( d3.random.normal() ),
-    months = ['January', 'February', 'March', 'April', 
-              'May', 'June', 'July', 'August', 
+    months = ['January', 'February', 'March', 'April',
+              'May', 'June', 'July', 'August',
               'September', 'October', 'November', 'December']
     data = [{ x: x1, y: y1, text: months, type: 'scatter', name: '2014', hoverinfo: 'text+x+y',
               mode: 'markers', marker: {color: 'rgba(200, 50, 100, .7)', size: 16}
@@ -27,7 +28,7 @@ var myPlot = document.getElementById('myDiv'),
             { x: x3, y: y3, text: months, type: 'scatter', name: '2016', hoverinfo: 'text+x+y',
              mode: 'markers', marker: {color: 'rgba(10, 180, 180, .8)', size: 16}
             }];
-    layout = { 
+    layout = {
         hovermode:'closest',
         title:'Display Hover Info for Related Points',
         xaxis:{zeroline:false, hoverformat: '.2r'},
