--- a/_posts/plotly_js/zoom-disable/2015-12-12-zoom-unbind-x-axis.html
+++ b/_posts/plotly_js/zoom-disable/2015-12-12-zoom-unbind-x-axis.html
@@ -9,10 +9,10 @@ arrangement: horizontal
 ---
 
 function makeplot() {
-    d3.csv("https://raw.githubusercontent.com/plotly/datasets/master/2014_apple_stock.csv", function(data){ processData(data) } );
+    Plotly.d3.csv("https://raw.githubusercontent.com/plotly/datasets/master/2014_apple_stock.csv", function(data){ processData(data) } );
 
 };
-    
+
 function processData(allRows) {
 
     console.log(allRows);
@@ -30,12 +30,12 @@ function processData(allRows) {
 function makePlotly( x, y, standard_deviation ){
     var plotDiv = document.getElementById("plot");
     var traces = [{
-        x: x, 
+        x: x,
         y: y
     }];
 
-    var layout = { xaxis: 
-                          { 
+    var layout = { xaxis:
+                          {
                             fixedrange: true
                           }
                 };
