--- a/_posts/plotly_js/callbacks-click/2015-04-09-click.html
+++ b/_posts/plotly_js/callbacks-click/2015-04-09-click.html
@@ -8,12 +8,13 @@ sitemap: false
 order: 0
 ---
 var myPlot = document.getElementById('myDiv'),
+    d3 = Plotly.d3,
     N = 16,
     x = d3.range(N),
     y = d3.range(N).map( d3.random.normal() ),
     data = [ { x:x, y:y, type:'scatter',
             mode:'markers', marker:{size:16} } ],
-    layout = { 
+    layout = {
         hovermode:'closest',
         title:'Click on Points'
      };
@@ -22,7 +23,7 @@ Plotly.newPlot('myDiv', data, layout);
 
 myPlot.on('plotly_click', function(data){
     var pts = '';
-    for(var i=0; i&lt;data.points.length; i++){
+    for(var i=0; i<data.points.length; i++){
         pts = 'x = '+data.points[i].x +'\ny = '+
             data.points[i].y.toPrecision(4) + '\n\n';
     }
