--- a/_posts/plotly_js/callbacks-hover/2015-04-09-hover-bind.html
+++ b/_posts/plotly_js/callbacks-hover/2015-04-09-hover-bind.html
@@ -9,6 +9,7 @@ order: 0
 ---
 var myPlot = document.getElementById('myDiv'),
     hoverInfo = document.getElementById('hoverinfo'),
+    d3 = Plotly.d3,
     N = 16,
     x = d3.range(N),
     y1 = d3.range(N).map( d3.random.normal() ),
@@ -17,7 +18,7 @@ var myPlot = document.getElementById('myDiv'),
         mode:'markers', marker:{size:16} },
         { x:x, y:y2, type:'scatter', name:'Trial 2',
         mode:'markers', marker:{size:16} } ];
-    layout = { 
+    layout = {
         hovermode:'closest',
         title:'Hover on Points'
      };
@@ -28,7 +29,7 @@ myPlot.on('plotly_hover', function(data){
     var infotext = data.points.map(function(d){
       return (d.data.name+': x= '+d.x+', y= '+d.y.toPrecision(3));
     });
-  
+
     hoverInfo.innerHTML = infotext.join('<br/>');
 })
  .on('plotly_unhover', function(data){
