--- a/_posts/plotly_js/responsive-fluid-layout/2015-10-20-responsive-fluid-layout.html
+++ b/_posts/plotly_js/responsive-fluid-layout/2015-10-20-responsive-fluid-layout.html
@@ -9,6 +9,7 @@ arrangement: horizontal
 display_as: basic
 ---
 (function() {
+var d3 = Plotly.d3;
 
 var WIDTH_IN_PERCENT_OF_PARENT = 60,
     HEIGHT_IN_PERCENT_OF_PARENT = 80;
