--- a/_posts/plotly_js/shapes/2015-06-17-shape-clusters.html
+++ b/_posts/plotly_js/shapes/2015-06-17-shape-clusters.html
@@ -7,7 +7,7 @@ order: 1
 sitemap: false
 arrangement: horizontal
 ---
-var d3 = Plotly.d3;
+var d3 = Plotly.d3
 
 function normal_array( mean, stddev, size ){
     var arr = new Array(size), i;
@@ -20,7 +20,7 @@ function normal_array( mean, stddev, size ){
         arr[i] = generator();
     }
     return arr;
-};
+}
 
 var x0 = normal_array(2, 0.45, 300);
 var y0 = normal_array(2, 0.45, 300);
@@ -112,8 +112,8 @@ var layout = {
             }
         }
     ],
-    height: 500,
-    width: 500,
+    height: 400,
+    width: 480,
     showlegend: false
 }
 
