--- a/_posts/2015-04-05-ggplot2-index.html
+++ b/_posts/2015-04-05-ggplot2-index.html
@@ -23,11 +23,16 @@ ggplotly()</code></pre>
 					<h6>Plotly graphs are interactive. Click on the legend entries to toggle traces, click and drag on the canvas to zoom, shift and click to pan.</h6>
 				</div>
 				<div class="z-depth-1">
-					<pre><code>p &lt;- ggplot(data = d, aes(x = carat, y = price)) +
-  geom_point(aes(text = paste("Clarity:", clarity)), size = 4) +
-  geom_smooth(aes(colour = cut, fill = cut)) + facet_wrap(~ cut)
-
-(gg &lt;- ggplotly(p))</code></pre>
+					<pre><code>
+					set.seed(100)
+					d &lt;- diamonds[sample(nrow(diamonds), 1000), ]
+					
+					p &lt;- ggplot(data = d, aes(x = carat, y = price)) +
+					geom_point(aes(text = paste("Clarity:", clarity)), size = 4) +
+					geom_smooth(aes(colour = cut, fill = cut)) + facet_wrap(~ cut)
+					
+					(gg &lt;- ggplotly(p))
+					</code></pre>
 				</div>
 				<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/1145.embed" width="800" frameBorder="0"></iframe>
 			</div>
